--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "class-notebooks"]
+	branch = main
 	path = class-notebooks
 	url = http://zapad.stanford.edu/GP257/labs-2023/class-notebooks.git
